Revision history for Perl extension CGI::Header.

0.40  Apr 7th, 2013

  - field_names() is obsolete and will be removed in 0.41
  - Add as_hashref(). get() and exists() will be replaced with this method:
     
      $h->get('Content-Type'); # <=> $h->as_hashref->{'Content-Type'}
      $h->exists('Content-Type'); # <=> exists $h->as_hashref->{'Content-Type'}

  - p3p_tags() is obsolete and will be renamed to p3p() in 0.41
  - each() is obsolete and will be removed in 0.41
  - is_empty() is obsolete and will be removed in 0.41
  - Add the following methods:
        * charset
        * cookie
        * location
        * push_cookie
        * push_p3p
        * status
        * target
        * type

  [INCOMPATIBLE CHANGES]

    - Doesn't overload '""' and 'bool' anymore
    - flatten() doesn't accept any argument

0.35  Mar 22nd, 2013

  - lc() is obsolete and will be removed in 0.36
  - get(), set(), exists() or delete() throws an exception
    in the following situation:

      $header->set( 'Type' => 'text/plain' );
      # die "'-type' can't be used as a field name"

  - SCALAR returns true if the -nph pragma is enabled
  - Since the following class methods are unstable,
    they are not documented:

      * normalize_field_name
      * normalize_property_name
      * get_property_names
      * is_reserved_name
      * get_alias

0.34  Mar 16th, 2013

  - Add support for -nph pragma:

      use CGI qw(-nph);
      my $h = CGI::Header->new;
      $h->nph; # => true

    If -nph pragma is enabled, you can't set nph() to FALSE:

      $h->nph(0); # die "Modification of a read-only value attempted"

    You can check whether the pragma is enabled or not as follows:

      $h->query->nph; # <=> $CGI::NPH

    You can also set $CGI::NPH to FALSE:

      $h->query->nph(0);
      $h->nph(0); # lives_ok

0.33  Mar 15th, 2013

  - Add tests for CGI::Header::Redirect
  - Fix POD: "CGI::Header::Redirect#is_empty always returns false"