@@ -22,23 +22,23 @@ subtest 'an empty string' => sub {
 
 subtest 'an array' => sub {
     my $header = tie my %header, 'CGI::Header';
-    $header->p3p_tags( qw/CAO DSP LAW CURa/ );
+    $header->p3p( qw/CAO DSP LAW CURa/ );
     is_deeply $header->header, { -p3p => [qw/CAO DSP LAW CURa/] };
     is $header{P3P}, 'policyref="/w3c/p3p.xml", CP="CAO DSP LAW CURa"';
     ok exists $header{P3P};
-    is $header->p3p_tags, 4;
-    is_deeply [ $header->p3p_tags ], [qw/CAO DSP LAW CURa/];
+    is $header->p3p, 4;
+    is_deeply [ $header->p3p ], [qw/CAO DSP LAW CURa/];
     is delete $header{P3P}, 'policyref="/w3c/p3p.xml", CP="CAO DSP LAW CURa"';
     is_deeply $header->header, {};
 };
 
 subtest 'a plain string' => sub {
     my $header = tie my %header, 'CGI::Header';
-    $header->p3p_tags( 'CAO DSP LAW CURa' );
+    $header->p3p( 'CAO DSP LAW CURa' );
     is_deeply $header->header, { -p3p => 'CAO DSP LAW CURa' };
     ok exists $header{P3P};
-    is $header->p3p_tags, 4;
-    is_deeply [ $header->p3p_tags ], [qw/CAO DSP LAW CURa/];
+    is $header->p3p, 4;
+    is_deeply [ $header->p3p ], [qw/CAO DSP LAW CURa/];
     is delete $header{P3P}, 'policyref="/w3c/p3p.xml", CP="CAO DSP LAW CURa"';
     is_deeply $header->header, {};
 };
